--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="container">
         <h1>Becky Says....</h1>
         <br>
-        <button id="toggle" class="btn btn-toggle">
+        <!-- <button id="toggle" class="btn btn-toggle">
             Toggle Text Box & Choose Your Voice
-        </button>
+        </button> -->
         <br>
         <div id="text-box" class="text-box">
             <div id="close" class="close">X</div>
